fixed align of purple line

--- a/src/app/landing-page-content/components/projects-portfolio/projects-portfolio.component.scss
+++ b/src/app/landing-page-content/components/projects-portfolio/projects-portfolio.component.scss
@@ -43,6 +43,7 @@ p {
     height: 4px;
     background-color: #9747FF;
     border: none;
+    margin-top: 5px;
 }
 
 .long-line-container {
@@ -65,6 +66,7 @@ h1 {
     border-top-left-radius: 4px;
     background-color: #9747FF;
     border: none;
+    margin-top: 5px;
 }
 
 .short-line-container {
@@ -120,7 +122,7 @@ h1 {
         margin-left: -25px;
     }
 
-    .portfolio-headline{
+    .portfolio-headline {
         gap: 10px;
     }
 
